# PortableWildcards

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh
CMake/PortableWildcards/: PortableWildcardsConfig.cmake
Lib/: CMakeLists.txt  PortableWildcards.cpp  PortableWildcards.h
Lib/Test/: CMakeLists.txt  PortableWildcardsTest.cpp
